
$Id: changes.txt,v 1.112 2006/11/07 13:06:13 vvd0 Exp $

MVDSV v0.25.01-CVS build 25?? (200?.??.??)
----
* VVD <vvd0@users.sourceforge.net>
- changed internal 'cmd dl -N' - download the Nth to last demo from demodir - work like before
  changes in 0.21

* disconnect <disconn3ct@users.sourceforge.net>
- qtv was updated to version v1
- new cvar qtv_password - password for connecting to qtv
- renamed cvars mvd_streamport and mvd_maxstreams to qtv_streamport and qtv_maxstreams


MVDSV v0.25 build 2500 (2006.10.25)
----
* qqshka <qqshka@users.sourceforge.net>
- allow player move even chat userinfo present

* VVD <vvd0@users.sourceforge.net>
- optimized SV_DirSizeCheck - used every time on demo record start
- small optimization in Sys_listdir (used, for example, in 'cmd dlist')
- increased maximum of fps in qwdtools from 100 to 1000
- replaced last 2 dangerous strcpy with strlcpy in qwdtools

* disconnect <disconn3ct@users.sourceforge.net>
- field offsets cacheing (ported from ZQuake)
- made localcommand more verbose
- kqueue was disabled on NetBSD and OpenBSD because it don't work


----
MVDSV v0.21-develop build 2480 (2006.10.05)
* disconnect <disconn3ct@users.sourceforge.net>
- Ported from QW262: new command admin - spy'ing on rcon usage
  Can be used only by connected player. When you enable `spy mode' and
  somebody use rcon - you will be noticed. Use rcon admin off to disable spy mode.
- ZQuake's cmodel.c instead of original sv_model.c
- bugfix: banned users can use master_rcon

* jhodge <jhodge@users.sourceforge.net>
- new cvar sv_allowlastscores
  0 - disallow connection less command lastscores
  1 - allow connection less command lastscores
  default: 1
- bugfix from 0.1727: possibility to run master_rcon commands with normal rcon

* VVD <vvd0@users.sourceforge.net>
- 'cmd stopdl' now clear download queue like 'cmd dl \'
- changed internal 'cmd dl <N dots>' - download the Nth to last recorded demo on this server